Fixed bug with work header bleeding out of container and/or squeezing work logo.

--- a/styles/work.css
+++ b/styles/work.css
@@ -28,12 +28,16 @@
     @apply p-6 flex flex-row justify-start items-center bg-white leading-tight rounded;
   }
 
+  .work__header a {
+    @apply shrink-0;
+  }
+
   .work__header h3 {
-    @apply font-bold text-lg md:text-xl whitespace-nowrap;
+    @apply font-bold text-lg lg:text-xl whitespace-nowrap;
   }
 
   .work__logo {
-    @apply w-10 h-10 mr-4 md:w-12 md:h-12 md:mr-6 rounded;
+    @apply w-10 h-10 mr-4 lg:w-12 lg:h-12 lg:mr-6 rounded;
   }
 
   .work__body {
